

2020-01-15 Franz Holzinger <franz@ttproducts.de>
    * bugfix in condition ext: extension key could not be extracted.
    * bugfix: add the missing namespace to class ExtensionManagementUtility

2020-01-09 Franz Holzinger <franz@ttproducts.de>
    * Reduce the methods of the local class ExtensionManagementUtility to those needed by this extension.

2020-03-31 Franz Holzinger <franz@ttproducts.de>
    * modifications to composer.json
    * Support for TYPO3 9.5

2019-06-26 Franz Holzinger  <franz@ttproducts.de>
    * add the namespaces for userFunc to the documentation

2019-01-03 Franz Holzinger  <franz@ttproducts.de>
    * bugfix for TYPO3 8.x.x: Uncaught TYPO3 Exception
Class EXT:tt_products/hooks/class.tx_ttproducts_match_condition.php:&tx_ttproducts_match_condition not found. Add support for the older class hooks.
    * TYPO3 7.2 needs the array indexes in the string format.

2018-11-30 Franz Holzinger  <franz@ttproducts.de>

    * Support for namespaces in the userFunc hook
    * Rename the extension title in order to explain that the userFunc is also enhanced by parameters and a return value.
    * add a composer.json file

2018-01-09 Franz Holzinger  <franz@ttproducts.de>

    * Support for TYPO3 8.x.x

2017-03-21 Franz Holzinger  <franz@ttproducts.de>

    * Support for TYPO3 7.x.x

2015-07-25 Franz Holzinger  <franz@ttproducts.de>

	* Support for TYPO3 7.4.x

2015-05-01 Franz Holzinger  <franz@ttproducts.de>

	* Support for TYPO3 6.2.x

2012-02-24 Franz Holzinger  <franz@ttproducts.de>

	* Support for TYPO3 4.5.x

2010-04-20 Franz Holzinger  <franz@ttproducts.de>

	* Support for TYPO3 4.3.x and 4.4.x.
	* enhancement for userFunc: Add hook to support the inclusion of methods in TypoScript conditions where the code is the PHP of an extension. A userFunc allows multiple parameters. The return value of the userFunc may be che+cked against string values.

2010-04-20 Franz Holzinger  <franz@ttproducts.de>
